# likeli-sol

./: .gitignore  ANCHOR_INSTALL.md  calc_disc.js  check_onchain.js  fix_orderbook.js  package-lock.json
likeli-app/: ENV_SETUP.md  package-lock.json  package.json  tsconfig.json
likeli-app/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
likeli-app/src/app/community/: page.tsx
likeli-app/src/components/: Leaderboard.tsx  Orderbook.module.css  Orderbook.tsx  UserProfile.tsx
likeli-app/src/components/charts/: PriceHistoryChart.tsx
likeli-app/src/components/community/: IdeasSidebar.tsx  MarketEmbed.tsx  PostCard.tsx  PostComposer.tsx  community.module.css
likeli-app/src/components/landing/: LandingHero.tsx
likeli-app/src/components/layout/: AppLayout.tsx  Sidebar.tsx  layout.module.css
likeli-app/src/components/market/: MarketSimpleChart.tsx  MultiOutcomeChart.tsx  OracleStatus.tsx
likeli-app/src/components/markets/: CreateMarketModal.tsx  MarketCard.tsx  MarketsGrid.tsx  SolanaCreateMarketModal.tsx  markets.module.css
likeli-app/src/components/portfolio/: PositionsAndHistory.tsx
likeli-app/src/context/: AuthContext.tsx  ParlayContext.tsx  SolanaWalletProvider.tsx
likeli-app/src/hooks/: useLikeliProgram.ts
likeli-app/src/idl/: likeli_contracts.json
likeli-app/src/lib/: cpmm.ts  graduation.ts  orderbook.ts  sandbox.ts  store.tsx
likeli-contracts/: Anchor.toml  Cargo.toml
likeli-contracts/programs/likeli-contracts/: Cargo.toml
likeli-contracts/programs/likeli-contracts/src/: lib.rs
likeli-contracts/tests/: likeli-contracts.js
(+79 files in other folders)
